# air-monitor-ota

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  STM32G474XX_APP.ld  air-monitor-ota.ioc  aws.md.example  test-at.ioc
.cache/clangd/index/: cmsis_compiler.h.38A89D456F600925.idx  cmsis_gcc.h.4FF809041B6456E5.idx  cmsis_version.h.1EFEE8B63598CB91.idx  core_cm4.h.0924BD50B9722A45.idx  main.c.B6B8DCBA95566907.idx  main.h.CB6E9AE0E9DB9905.idx  mpu_armv7.h.1FA75ED3A51C79EC.idx  startup_stm32g474xx.s.C4F048152BB3ABBF.idx  stm32_hal_legacy.h.19B6C71D5242BAF5.idx  stm32g474xx.h.369E23311E50039A.idx  stm32g4xx.h.31FEAA4E99C522EA.idx  stm32g4xx_hal.c.160916D7560AB629.idx  stm32g4xx_hal.h.08418F9D822369A9.idx  stm32g4xx_hal_conf.h.1F6F15505B9EC1B9.idx  stm32g4xx_hal_cortex.c.3BD82D2B33789374.idx  stm32g4xx_hal_cortex.h.E976BD6D1ED19228.idx  stm32g4xx_hal_def.h.DB7248863D800F3F.idx  stm32g4xx_hal_dma.c.082278C7C4D5238D.idx  stm32g4xx_hal_dma.h.DE541F85F5F209E3.idx  stm32g4xx_hal_dma_ex.c.838559791BA8C84B.idx  stm32g4xx_hal_dma_ex.h.90DF6CBBF70A96CA.idx  stm32g4xx_hal_exti.c.A36FB33D988F0EB5.idx  stm32g4xx_hal_exti.h.75E1E8FDC6C60E76.idx  stm32g4xx_hal_flash.c.884951EBCAC58576.idx  stm32g4xx_hal_flash.h.BD0EE53F22DBE648.idx  stm32g4xx_hal_flash_ex.c.34A55E6F7CBBB269.idx  stm32g4xx_hal_flash_ex.h.8450D008F694672F.idx  stm32g4xx_hal_flash_ramfunc.c.FB2BF9A438D0A40C.idx  stm32g4xx_hal_flash_ramfunc.h.53429BEF1D2AFCCE.idx  stm32g4xx_hal_gpio.c.1CF8C47D4FABB861.idx  stm32g4xx_hal_gpio.h.9DBBB15FFF9C4DF0.idx  stm32g4xx_hal_gpio_ex.h.0012872617D5F328.idx  stm32g4xx_hal_msp.c.8F4BA64C61CD4FD9.idx  stm32g4xx_hal_pwr.c.E351BA143E865C9D.idx  stm32g4xx_hal_pwr.h.C46A7C12976AD3C6.idx  stm32g4xx_hal_pwr_ex.c.610E599F63389788.idx  stm32g4xx_hal_pwr_ex.h.2AF94416160CF41D.idx  stm32g4xx_hal_rcc.c.B6504C6E2630D37C.idx  stm32g4xx_hal_rcc.h.53EF21C65FBBF234.idx  stm32g4xx_hal_rcc_ex.c.F2FA17C56FEDC3D9.idx  (+17 more)
.github/workflows/: ci.yml  ota-release.yml
Components/dht11/Inc/: dht11.h
Components/dht11/Src/: dht11.c
Components/esp32-at/Inc/: configuration.h  configuration.h.example  esp32-at.h
Components/esp32-at/Src/: esp32-at.c
Components/flash/Inc/: flash.h
Components/flash/Src/: flash.c
Components/mcuboot_app/Inc/: mcuboot_app.h
Components/mcuboot_app/Src/: mcuboot_app.c
Components/mcuboot_port/Inc/: flash_hal.h
Components/mcuboot_port/Src/: bootutil_port.c  flash_hal.c  flash_map_backend.c
Components/mcuboot_port/include/: flash_layout.h
Components/mcuboot_port/include/flash_map_backend/: flash_map_backend.h
Components/mcuboot_port/include/mcuboot_config/: mcuboot_config.h  mcuboot_logging.h
Components/mcuboot_port/include/os/: os_malloc.h
Components/mcuboot_port/include/sysflash/: sysflash.h
Components/ota/Inc/: ota.h  ota_cbor.h
Components/ota/Src/: ota.c  ota_cbor.c
Core/Inc/: main.h
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
bootloader/: CMakeLists.txt  STM32G474XX_BOOT.ld  main.c  mcuboot.conf
cmake/: gcc-arm-none-eabi.cmake  mcuboot.cmake
scripts/: generate-configuration.py
